test-suite/tests/ui/invalid_derive_name.rs
use raiden_sqs::*;
use serde::Serialize;

#[derive(RaidenCloudPubSub, Serialize)]
pub struct GreetingMessage {
    name: String,
}

fn main() {}
